[package]
name = "rust_drv_examples_minimal"
description = "Minimal Windows kernel driver sample."
version = "0.1.0"
authors = ["pravic <ehysta@gmail.com>"]
readme = "../README.md"

build = "../build.rs"
edition = "2018"

[lib]
path = "driver.rs"
name = "minimal"
crate-type = ["dylib"]

test = false
bench = false

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
winapi-kmd  = { path = "../../", version="*" }
